css: fixed indicator z-index

--- a/html/css/partials/indicators.css
+++ b/html/css/partials/indicators.css
@@ -35,6 +35,7 @@ a.indicator[data-count]:after{
   position:absolute;
   right:-1px;
   bottom:-6px;
+  z-index: 1;
 }
 a.indicator[data-count="0"]:after {
   display: none;
